Bug 928804 - Always use an up-to-date texture transform when compositing SharedTextureSourceOGL. r=nical, a=bajaj